--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=sistema-reservas
+# Configuración de conexión a MySQL (workbench)
+spring.datasource.url=jdbc:mysql://localhost:3306/sistema_reservas?useSSL=false&serverTimezone=UTC
+spring.datasource.username=admin
+spring.datasource.password=reservas$1.5
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Puerto del servidor
+server.port=8080
